# Auto_manga_cleaner

./: .gitignore  Export.ipynb  Model.ipynb  README.md  export.py  onnx_test.py
plugin/: Cargo.toml  recv.bat  send.sh
plugin/mangai-clean/: .gitignore  Cargo.toml  build.rs
plugin/mangai-clean-ps-plugin/: Cargo.toml  build.rs
plugin/mangai-clean-ps-plugin/src/: console.rs  lib.rs  panic_handler.rs  point.rs  progress.rs  rect.rs
plugin/mangai-clean-ps-plugin/src/resource/: MangaiClean.lib  MangaiClean.r  MangaiClean.rc  MangaiClean_utf8.rc  compile.sh
plugin/mangai-clean/examples/: clean-image.rs
plugin/mangai-clean/src/: batcher.rs  lib.rs  model_registry.rs
plugin/mangai-clean/src/model/: mod.rs  onnxruntime.rs  tract.rs
plugin/mangai-clean/src/resource/: .gitignore  MangaiClean.lib  MangaiClean.r  MangaiClean.rc  compile.sh
plugin/ps-sdk-sys/: Cargo.toml  bindgen.sh  ps-api.h
plugin/ps-sdk-sys/src/: generated.rs  lib.rs
reports/: ProjectProgress2.odt  ProjectProgress3.odt
tools/fonts/: ddd_download.py
tools/onnx/: onnx_optimize.py
