[package]
name = "mangai-clean-ps-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ps-sdk-sys = { path = "../ps-sdk-sys" }
#mangai-clean = { path = "../mangai-clean" }

msgbox = "0.7.0"
num_enum = "0.5.7"
windows = { version = "0.43.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[build-dependencies]
version_check = "0.9.4"
winresource = "0.1.14"
