[package]
name = "mangai-clean-ps-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ps-sdk-sys = { path = "../ps-sdk-sys" }
mangai-clean = { path = "../mangai-clean", default-features = false, features = ["onnxruntime-backend"] }

msgbox = "0.7.0"
num_enum = "0.5.7"
windows = { version = "0.43.0", features = ["Win32_System_Console", "Win32_Foundation"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ansi_term = "0.12.1"
once_cell = "1.16.0"

ndarray = { workspace = true }
# intel-mkl required for windows builds
ndarray-linalg = { workspace = true, features = ["intel-mkl-static"] }
intel-mkl-src = "0.8.1"

nwg = { package = "native-windows-gui", version = "1.0.13", features = [] }
nwd = { package = "native-windows-derive", version = "1.0.4", features = [] }
human_bytes = "0.4.1"
#fltk = { version = "1.3.21", features = ["fltk-bundled"] }

[build-dependencies]
version_check = "0.9.4"
winresource = "0.1.14"
