[package]
name = "mangai-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ndarray-image = "0.3.0"
prost = "0.11.2"
tract-onnx = "0.18.3"
#onnxruntime = "0.0.14"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
camino = "1.1.1"
nshare = "0.9.0"
image = { version = "0.24.5", features = ["png"] }
