[package]
name = "mangai-clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
tracing = "0.1.37"
cfg-if = "1.0.0"

prost = "0.11.2"
ndarray = { workspace = true }
ndarray-vision = { workspace = true }

tract-onnx = { workspace = true, optional = true }
onnxruntime = { workspace = true, optional = true }
once_cell = "1.16.0"

ureq = { version = "2.5.0", features = ["tls"] }
directories = "4.0.1"
sha2 = "0.10.6"
hex = "0.4.3"

[features]
default = ["tract-backend"]
tract-backend = ["tract-onnx"]
onnxruntime-backend = ["onnxruntime"]

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
camino = "1.1.1"
nshare = "0.9.0"
image = { version = "0.24.5", features = ["png"] }
tracing-subscriber = "0.3.16"
indicatif = "0.17.2"
